# entropy-lab-rs

./: .env.example  .gitignore  ADDRESS_FORMAT_REFERENCE.md  ADVANCED_GPU_OPTIMIZATIONS.md  AUDIT_FIX_SUMMARY.md  AUDIT_GAPS_FIXED.md  AUDIT_REPORT_CORRECTED.md  AUDIT_REPORT_FINAL.md  BRAINWALLET_VERIFICATION.md  BUG_AND_GAP_ANALYSIS_REPORT.md  BUG_FIX_SUMMARY.md  COMPLETION_REPORT.md  CONTRIBUTING.md  CRYPTOGRAPHIC_AUDIT.md  Cargo.toml  ELECTRUM_FIX_SUMMARY.md  GAPS_FIXED_FINAL.md  GAP_ANALYSIS_SUMMARY.md  GAP_CLOSURE_IMPLEMENTATION.md  GPU_CONSTANT_MEMORY_FIX.md  GPU_GUI_INTEGRATION.md  GPU_IMPLEMENTATION_SUMMARY.md  GPU_OPTIMIZATION_GUIDE.md  GPU_OPTIMIZATION_IMPLEMENTATION.md  GPU_STATUS_ASSESSMENT.md  GUI_GUIDE.md  HASHCAT_ANALYSIS_SUMMARY.md  HASHCAT_BRAINWALLET_MODULE_SPEC.md  HASHCAT_MODULES_RECOMMENDED.md  HASHCAT_MODULES_SUMMARY.md  HASHCAT_MODULE_ANALYSIS.md  HASHCAT_MODULE_IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  MILKSAD_GAP_ANALYSIS.md  OPENCL_GAPS_ANALYSIS.md  OPENCL_OPTIMIZATIONS.md  OPTIMIZATION_FINAL_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  (+21 more)
.github/: copilot-instructions.md
_bmad-output/: BMAD-COMPLIANCE-REPORT.md  BMAD-PR-COMPLIANCE-CHECKLIST.md  PHASE_1_COMPLETION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  WORKFLOW-PROGRESS-SUMMARY.md  architecture.md  atdd-checklist-story-1.9.1.md  bitcoinjs-typo-verification.md  bmm-workflow-status.yaml  code-review-story-1.6-1.7.md  code-review-story-1.9.md  comprehensive-quality-review-epic1.md  epic-002-retrospective.md  epics.md  high-priority-fixes-complete.md  implementation-readiness-report-2025-12-17.md  implementation-readiness-report-2025-12-23.md  implementation-readiness-report-2025-12-24.md  implementation-readiness-report-2025-12-25.md  index.md  medium-priority-fixes-complete.md  module-accuracy-assessment.md  phase-13-tech-spec.md  prd-backup-2025-12-22.md  prd-v2.0-backup-pre-coverage-update.md  prd.md  project-scan-report.json  randstorm-bitcoinjs-test-report.md  randstorm-implementation-progress.md  randstorm-phase1-implementation-checklist.md  randstorm-readme-coverage-disclaimer.md  randstorm-tech-spec.md  randstorm-unciphered-disclosure-analysis.md  randstorm-vulnerable-code-extracted.md  session-summary-2025-12-17.md  story-1.10-randstorm-tooling-optimization.md  story-1.6-implementation-report.md  story-1.8-implementation-report.md  story-1.8.1-test-implementation.md  story-1.9-comprehensive-randstorm.md  (+8 more)
_mcp/: MCP_WEB_SEARCH_INSTALLATION.md  QUICK_START.md
benches/: gpu_optimization_benchmark.rs
cl/: address.cl  address_poisoning.cl  base58.cl  batch_address.cl  batch_address_electrum.cl  batch_address_optimized.cl  batch_cake_full.cl  batch_cake_wallet.cl  batch_profanity.cl  bench_linear.cl  bip39_full.cl  bip39_helpers.cl  bip39_pbkdf2.cl  bip39_wordlist.cl  bip39_wordlist_complete.cl  bloom_filter.cl  cake_hash.cl  cake_wallet_crack.cl  common.cl  dart_prng.cl  keccak256.cl  milk_sad_crack.cl  milk_sad_crack_multi30.cl  milk_sad_crack_multipath.cl  milk_sad_multipath.cl  minstd_rand.cl  mnemonic_constants.cl  mobile_sensor_crack.cl  mobile_sensor_hash.cl  mobile_sensor_test.cl  mt19937.cl  mt19937_64.cl  randstorm_multi_path.cl  randstorm_scan.cl  randstorm_scan_bloom.cl  ripemd.cl  secp256k1.cl  secp256k1_prec.cl  secp256k1_scalar.cl  sha2.cl  (+5 more)
crates/temporal-planetarium-cli/: Cargo.toml
crates/temporal-planetarium-cli/src/: main.rs
crates/temporal-planetarium-cli/src/commands/: brainwallet_import.rs  list_keys.rs  mod.rs  nonce_crawler.rs
crates/temporal-planetarium-lib/: Cargo.toml
crates/temporal-planetarium-lib/benches/: bloom_vs_linear.rs  brainwallet_benchmark.rs  cryptodeeptools_comp.rs  gpu_derivation_benchmark.rs  gpu_optimization_benchmark.rs  randstorm_streaming.rs  trust_wallet_benchmark.rs  wgpu_metal_benchmark.rs
crates/temporal-planetarium-lib/data/: forensic_targets.db-shm
crates/temporal-planetarium-lib/src/: lib.rs
crates/temporal-planetarium-lib/src/scans/: brainwallet.rs  direct_key.rs  gpu_solver.rs  malicious_extension.rs  milk_sad.rs  mod.rs  passphrase_recovery.rs  verify_csv.rs
crates/temporal-planetarium-lib/src/scans/cake_wallet/: mod.rs  prng.rs  rpc.rs  standard.rs  targeted.rs
crates/temporal-planetarium-lib/src/scans/nonce_reuse/: mod.rs
crates/temporal-planetarium-lib/src/scans/randstorm/: attack_estimator.rs  check_lib.py  cli.rs  compare_k.py  config.rs  core_types.rs  derivation_batcher.rs  fingerprint.rs  forensics.rs  gpu_integration.rs  heuristics.rs  integration.rs  mod.rs  randstorm.wgsl  scanner_trait.rs  sim_sha.py  sim_sha_rounds.py  sim_sha_v2.py  synthetic_wallet.rs  validator.rs  wgpu_integration.rs  z3_solver.rs
crates/temporal-planetarium-lib/src/scans/randstorm/cpu/: mod.rs
crates/temporal-planetarium-lib/src/scans/randstorm/engines/: chakra.rs  mod.rs  safari.rs  sm.rs  v8.rs
crates/temporal-planetarium-lib/src/scans/randstorm/fingerprints/: mod.rs
crates/temporal-planetarium-lib/src/scans/randstorm/prng/: bitcoinjs_v013.rs  chrome_v8.rs  firefox_ie_lcg.rs  lfsr_seed.rs  mod.rs  safari_windows.rs
crates/temporal-planetarium-lib/src/scans/trust_wallet/: lcg.rs  mod.rs  standard.rs
crates/temporal-planetarium-lib/src/utils/: bitcoin_rpc.rs  brainwallet.rs  db.rs  encryption.rs  gpu_bloom_filter.rs  mod.rs
crates/temporal-planetarium-lib/tests/: test_derivation_integration.rs  test_trust_wallet.rs  wgpu_backend_test.rs
docs/: AUDIT_EXECUTIVE_SUMMARY.md  CODEBASE_AUDIT_2026-01.md  README.md  ci-secrets-checklist.md  ci.md
examples/: README.md  validate_cpu.rs
hashcat-modules/: DEVELOPMENT.md  INTEGRATION_EXAMPLES.md  MODULE_README.md  README.md  USAGE.md
hashcat_modules/: IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  module_30501.c  module_30502.c  module_30503.c  test_30501.hash  test_30502.hash  test_30503.hash
milksad-reference/rust-brainwallet-search/: Cargo.toml  README.md
milksad-reference/rust-brainwallet-search/src/: lib.rs
milksad-reference/rust-wallet-helper/: Cargo.toml  README.md
milksad-reference/rust-wallet-helper/src/: lib.rs
(+209 files in other folders)
