[package]
name = "entropy-lab-rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
gpu = ["dep:ocl"]

[dependencies]
bitcoin = { version = "0.32", features = ["rand"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
bip39 = "2.0"
rand_mt = "4.2" # For Trust Wallet MT19937
rand_chacha = "0.3"
bloom = "0.3"
csv = "1.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
bitcoincore-rpc = "0.19"
reqwest = { version = "0.12", features = ["blocking", "json"] }
ocl = { version = "0.19", optional = true }
md5 = "0.7"
num-bigint = "0.4"
num-traits = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
bs58 = { version = "0.5.1", features = ["check"] }
bech32 = "0.11.1"
bloomfilter = { version = "3.0.1", features = ["serde"] }
serde_json = "1.0.145"
siphasher = { version = "1.0.1", features = ["serde"] }





[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

