[workspace]
resolver = "2"
members = [
    "crates/temporal-planetarium-lib",
    "crates/temporal-planetarium-cli",
]

[workspace.dependencies]
temporal-planetarium-lib = { path = "crates/temporal-planetarium-lib" }
bitcoin = { version = "0.32", features = ["rand"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
