[package]
name = "temporal-planetarium-cli"
version = "0.1.0"
edition = "2021"

[features]
default = []
gui = ["temporal-planetarium-lib/gui"]
wgpu = ["temporal-planetarium-lib/wgpu"]
gpu = ["temporal-planetarium-lib/gpu"]

[dependencies]
temporal-planetarium-lib = { path = "../temporal-planetarium-lib" }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = { version = "0.32", features = ["rand"] }
chrono = "0.4"
bitcoincore-rpc = "0.19"
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
indicatif = "0.17"
