[package]
name = "rust-brainwallet-search"
version = "0.1.0"
edition = "2024"
# not meant to be published as a crate
publish = false

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rayon = "1.10.0"
bloomfilter = "1.0.14"
sha2 = { version = "0.10.9" }
sha3 = { version = "0.10" }
csv = "1.3.1"

# unmaintained, last release in Mar 3, 2021
# faster options available?
hex = "0.4.3"

bitcoin = { version = "0.99.0", features = [
    "std",
], default-features = false } # special handling, see below

# re-use existing custom bloom filter handling code
address_filter = { path = "../early_research_code/address_filter" }

# helper lib
rust_wallet_helper = { path = "../rust-wallet-helper" }

# https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html
[patch.crates-io]
# use custom unsafe fast version
bitcoin = { git = "https://git.distrust.co/milksad/rust-bitcoin-unsafe-fast" }

# use custom unsafe fast version
secp256k1 = { git = "https://git.distrust.co/milksad/rust-secp256k1-unsafe-fast" }

[profile.release]
# leads to faster + smaller binaries
panic = 'abort'
# slower compilation but potentially faster runtime
codegen-units = 1
lto = "thin"
